Changed how images are displayed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
   </head>
   <body>
     <div class="card">
-      <div class="image"></div>
+      <img class="desktop-img" src="/images/image-product-desktop.jpg" alt="Product Image" />
+      <img class="mobile-img" src="/images/image-product-mobile.jpg" alt="Product Image" />
       <p class="category">Perfume</p>
       <p class="product">Gabrielle Essence Eau De Parfum</p>
       <p class="description">
