--- a/index.html
+++ b/index.html
@@ -29,17 +29,21 @@
   </head>
   <body>
     <div class="card">
-      <img class="desktop-img" src="/images/image-product-desktop.jpg" alt="Product Image" />
-      <img class="mobile-img" src="/images/image-product-mobile.jpg" alt="Product Image" />
-      <p class="category">Perfume</p>
-      <p class="product">Gabrielle Essence Eau De Parfum</p>
-      <p class="description">
-        A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of
-        CHANEL.
-      </p>
-      <span class="reduced-price">$149.99</span>
-      <span class="original-price">$169.99</span>
-      <button type="button" class="to-cart-btn">Add to Cart</button>
+      <div class="img-container">
+        <img class="desktop-img" src="/images/image-product-desktop.jpg" alt="Product Image" />
+        <img class="mobile-img" src="/images/image-product-mobile.jpg" alt="Product Image" />
+      </div>
+      <div class="product-container">
+        <p class="category">Perfume</p>
+        <p class="product">Gabrielle Essence Eau De Parfum</p>
+        <p class="description">
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of
+          CHANEL.
+        </p>
+        <span class="reduced-price">$149.99</span>
+        <span class="original-price">$169.99</span>
+        <button type="button" class="to-cart-btn">Add to Cart</button>
+      </div>
     </div>
 
     <div class="attribution">
